--- a/formulario.html
+++ b/formulario.html
@@ -1,17 +1,21 @@
-<!DOCTYPE html>
+<!DOCTYPE>
 <html>
 <head>
-  <title>Formulário</title>
-  <meta charset="utf-8">
+<META charset=utf-8">
 </head>
 <body>
-  <form action="exibir_mensagem1.html">
-    <p>Inserir nome: </p>
-    <input type="text">
-    <a href="exibir_mensagem.html"><h6>Gravar</h6></a>
-    
-  </form>
 
+
+	
+	
+
+<div>
+	<h1>Listar Pessoas</h1>
+	<ol>
+		<li><a href="http://formulario.html" target="_blank">Aléxia </a><a href="http://exibir_mensagem.html" target="_blank">Del</a></li>
+		<li><a href="http://formulario.html" target="_blank">Rosa  </a><a href="http://exibir_mensagem.html" target="_blank">Del</a></li>
+	</ol>
+	<a href="http://formulario.html" target="_blank"><h6>Inserir Pessoa</h6></a>
+</div>
 </body>
 </html>
-
