--- a/form_inserir_pessoa.html
+++ b/form_inserir_pessoa.html
@@ -1,4 +1,3 @@
-
 <html lang="pt-br" >
     <head>
         <meta charset="utf-8">
@@ -10,5 +9,10 @@
             Endereço: <textarea name = endereco> </textarea>
             <input type="submit" value="salvar">
         </form>
+         {%if session ["usuario"]%}
+                <a href="/logout">Logout</a>
+            {%else%}
+                <a href="/form_login">Login</a>
+        {%endif%} 
     </body>
 </html>
